# fluxer-neptunium

./: Cargo.toml  README.md
examples/: Cargo.toml  file_upload.rs  replying_to_ping.rs  test_rate_limiting.rs  user_bot.rs
fluxer-gateway/: Cargo.toml
fluxer-gateway/src/: client.rs  lib.rs  model.rs
fluxer-gateway/src/client/: client_config.rs
fluxer-gateway/src/model/: object.rs  snowflake.rs
fluxer-neptunium/: Cargo.toml
fluxer-neptunium/src/: api.rs  cache.rs  client.rs  error.rs  events.rs  exts.rs  lib.rs
fluxer-neptunium/src/api/: messages.rs
fluxer-neptunium/src/client/: config.rs  (+1 more)
gateway/: Cargo.toml
gateway/src/: shard.rs
http/: Cargo.toml
http/src/: builders.rs  client.rs  endpoints.rs  lib.rs  responses.rs
model/: Cargo.toml
model/src/: channel.rs  guild.rs  id.rs
neptunium/: Cargo.toml
neptunium-cache-inmemory/: Cargo.toml
neptunium-cache-inmemory/src/: gateway.rs  lib.rs  structs.rs  traits.rs
neptunium-cache-inmemory/src/gateway/: cached_payload.rs
neptunium-cache-inmemory/src/gateway/cached_payload/: guild_events.rs  guild_member_list_update.rs  message_create.rs  message_events.rs  ready.rs  request_guild_members.rs  typing_start.rs
neptunium-cache-inmemory/src/traits/: cachable_endpoints.rs
neptunium-gateway/: Cargo.toml
neptunium-gateway/src/: shard.rs
neptunium-http/: Cargo.toml
neptunium-http/src/: client.rs  endpoints.rs  ratelimiting.rs
neptunium-model/: Cargo.toml
neptunium-model/src/: channel.rs  gateway.rs  guild.rs  misc.rs  user.rs
neptunium/src/: client.rs  events.rs  exts.rs  lib.rs
(+169 files in other folders)
