[package]
name = "neptunium-cache-inmemory"
edition = "2024"
description = "Caching implementation for fluxer-neptunium."
keywords = ["cache", "fluxer"]
readme = "README.md"
version.workspace = true
license.workspace = true
repository.workspace = true
categories = ["caching"]

[dependencies]
bon = "3.9.1"
lru = "0.16.3"
neptunium-model = { workspace = true }

[lints]
workspace = true
